# intro-to-eecs-601-ocaml

./: .ocamlformat  README.md  dune-project  intro_to_ee_and_cs_with_ocaml.opam
examples/: accumulator.ml  dune
junk/: accumulator-blah.ml  accumulator-foo.ml  accumulator-mod.ml  accumulator-modules.ml
lib/: StateMachine.ml  StateMachine.mli  dune  eecs601.ml
lib/Distributions/: Conditional.ml  Conditional.mli  Delta.ml  Delta.mli  Discrete.ml  Discrete.mli  Mixed.ml  Mixed.mli  Square.ml  Square.mli  Triangle.ml  Triangle.mli  Uniform.ml  Uniform.mli
lib/StateMachine/: Execution.ml  Execution.mli  Interfaces.ml
lib/StateMachines/: Accumulator.ml  Accumulator.mli  Executable.ml  Execution.ml  Execution.mli  Run.ml  Run.mli  StateEstimator.ml  StateEstimator.mli  StateMachine.ml  Stochastic.ml  Stochastic.mli  StochasticModel.ml  Trace.ml  Trace.mli  Transitions.ml  Transitions.mli  accumulator.ml  accumulator.mli
lib/Utilities/: Addable.ml  Interfaces.ml  Miscellaneous.ml  Miscellaneous.mli  Printable.ml
test/: Accumulator.md  Conditional.md  CopyMachineModel.ml  Delta.md  Discrete.md  Mixed.md  Square.md  StateEstimator.md  Stochastic.md  Triangle.md  Uniform.md  dune
test/Distributions/: Discrete.md  dune
test/StateMachines/: Accumulator.md
